feat: implement CostProfile system for Domain Discovery cost control
Add user-friendly cost profiles to control resource usage during domain
discovery. Users can select MINIMAL, BALANCED, or COMPREHENSIVE profiles
either via CLI flag (-c/--cost-profile) or through an interactive prompt.

New features:
- CostProfile record with three presets controlling:
  - Max expansion rounds (1/3/5)
  - Topics per expansion round (2/3/5)
  - Suggestions per topic (2-6/5-9/10-14)
  - Max content complexity level
  - Word count multiplier (0.6×/1.0×/1.5×)
  - Gap analysis (skip/enabled)
  - Relationship analysis depth (core/important/all)

- RelationshipDepth enum for filtering topic relationships:
  - CORE_ONLY: Only MUST_HAVE priority topics
  - IMPORTANT: MUST_HAVE and SHOULD_HAVE topics
  - ALL: Complete relationship analysis

- CLI integration:
  - New -c/--cost-profile flag for discovery mode
  - Interactive profile selection if not specified
  - Updated help text with cost profile documentation

- Discovery session integration:
  - Profile settings control expansion rounds and topics
  - TopicExpander uses profile for suggestions range
  - Gap analysis skipped for MINIMAL profile
  - Relationship mapping filtered by depth setting

- Comprehensive unit tests for CostProfile and RelationshipDepth

- README.md updates:
  - New "Cost Profiles" section with detailed breakdown
  - New "Running Without Maven" section with:
    - Shell alias setup
    - API key configuration methods
    - Common usage patterns
    - JVM options
    - Shell script integration
    - Troubleshooting guide
  - Updated command line reference with cost profile options

Files changed:
- New: CostProfile.java, RelationshipDepth.java
- New: CostProfileTest.java, RelationshipDepthTest.java
- Modified: AiPublisherCommand.java, DiscoveryInteractiveSession.java
- Modified: TopicExpander.java, README.md

All 1,209 tests pass.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude 